2009-01-04  Helmut Eller  <heller@common-lisp.net>

	* slime.el (slime-local-variable-p): New function. XEmacs requires
	two arguments.

2009-01-04  Helmut Eller  <heller@common-lisp.net>

	* swank-cmucl.lisp (note-error-location): If possible, include the
	filename.
	* slime.el (slime-goto-location-position): Add :eof as position
	kind.

2009-01-03  Helmut Eller  <heller@common-lisp.net>

	* slime.el (slime-goto-location-buffer): Don't goto point-min.
	(slime-check-location-buffer-name-sanity)
	(slime-check-location-filename-sanity): Separated from
	slime-goto-location-buffer.
	(slime-line-number-at-pos): New compatibility function.

2009-01-03  Helmut Eller  <heller@common-lisp.net>

	By default, show compiler notes in a buffer with compilation-mode.

	* slime.el (slime-show-compilation-log)
	(slime-maybe-show-compilation-log): New functions,
	(slime-compilation-finished-hook): Change the default value
	to 'slime-maybe-show-compilation-log.

2009-01-03  Helmut Eller  <heller@common-lisp.net>

	* swank.lisp (simple-serve-requests, make-repl-input-stream):
	Move the call to WITH-CONNECTION to the input stream to pick up
	stream redirections.

2009-01-03  Helmut Eller  <heller@common-lisp.net>

	* swank-clisp.lisp (wait-for-input): Disable it for win32.

2009-01-02  Helmut Eller  <heller@common-lisp.net>

	Experimental implementation of "channels".
	The idea is to support arbitrary protocols without
	changes to the low level event dispatcher.

	* slime.el (slime-make-channel, slime-close-channel)
	(slime-channel-send, slime-send-to-remote-channel): New functions.
	(slime-define-channel-type, slime-define-channel-method): New
	macros.
	(slime-dispatch-event): Support channel events.
	* swank.lisp (channel, listener-channel): New classes.
	(channel-send, send-to-remote-channel): New functions.
	(create-listener): New function.  Test case for channel code.
	(process-requests): Process channel events.

2009-01-02  Helmut Eller  <heller@common-lisp.net>
